--- a/230126.html
+++ b/230126.html
@@ -83,7 +83,7 @@
 
 
             alert( store.getState().color); //getstate는 스테이트에 저장된정보를 가져온느 친구임
-            store.subscribe(red); //red라는 함수를 실행해서 색이 바뀌게한다. 이 red는 fucntion.red함수를 의미하는거임
+            store.subscribe(red); //red라는 함수를 실행해서 색이 바뀌게한다. 이 red는 fucntion.red함수를 의미하는거임..
             // store.subscribe(change);
             store.subscribe(green);
             store.subscribe(yellow);
